@@ -282,8 +282,8 @@ from other errors that may occur when running the \fBstart\fR command.
 .
 .PP
 By default the \fBload\-kmod\fR command attempts to load the
-openvswitch_mod kernel module. If the \fB\-\-brcompat\fR option is
-specified then the brcompat_mod kernel module is also loaded.
+openvswitch kernel module. If the \fB\-\-brcompat\fR option is
+specified then the brcompat kernel module is also loaded.
 .
 .SH "The ``enable\-protocol'' command"
 .
